--- a/_posts/ROS2/2024-01-31-package.md
+++ b/_posts/ROS2/2024-01-31-package.md
@@ -93,7 +93,7 @@ python_pkg/
 
 
 # 패키지 빌드
-패키지 빌드는 colcon을 사용한다.
+Workspace의 'src' 폴더 안에 있는 ROS2 패키지들을 빌드할 때, colcon을 사용하여 빌드를 진행한다. 빌드가 완료되면, 빌드된 패키지들은 작업공간(workspace)의 디렉터리인 **'~/dev_ws/install'** 에 설치된다.
 
 **'ament_python'**을 사용하여 노드를 생성해보자.
 
@@ -137,3 +137,85 @@ $ ros2 run my_package my_node
 
 이 명령어는 빌드된 ROS 2 패키지들의 실행 파일, 라이브러리, 리소스에 접근할 수 있도록 현재 쉘의 환경을 구성하는 데 사용됩니다. 만약 source install/setup.bash 명령어를 실행하지 않으면 빌드된 패키지를 사용할 수 없습니다.
 ```
+
+# 실습
+### 목표
+새로운 작업공간을 생성 후 turtle_test 라는 패키지를 생성하고 해당 패키지의 launch 파일을 통해 turtlesim의 실행과 사각형을 그리는 두 작업이 동시에 시작할 수 있도록 해보자.
+
+### 과정
+1. 작업공간에 패키지 생성
+
+```bash
+$ cd ~/dev_ws/src
+$ ros2 pkg create turtle_test --build-type ament_python
+```
+
+2. turtle_test 패키지에 launch 폴더 생성 후 turtle_launch.launch.py 파일 생성
+```bash
+$ cd ~/dev_ws/src/turtle_test
+$ mkdir launch
+$ touch ./launch/turtle_launch.launch.py
+```
+
+![image](https://github.com/Juunghyeon/test/assets/78840944/a3be3821-581b-401e-a7b6-011aa7180ba0)
+
+3. turtle_test 패키지 빌드
+
+```bash
+$ cd ~/dev_ws
+$ colcon build --package-select turtle_test
+$ source ./install/setup.bash
+```
+
+4. launch 파일 실행 (Error 발생)
+
+```bash
+$ ros2 launch turtle_test turtle_launch.launch.py
+```
+launch 명령어를 실행하니 아래와 같이 에러가 발생했다. 
+
+```bash
+file 'turtle_launch.launch.py' was not found in the share directory of package 'turtle_test' which is at '/home/jh/dev_ws/install/turtle_test/share/turtle_test'
+```
+이 문제는 작업공간의 install 디렉터리에 설치된 turtle_test 패키지 폴더에 launch 폴더가 공유되지 않았기 때문에 발생한 문제이다. 그래서 turtle_test 패키지의 **'setup.py'** 파일을 확인해 보니 다음과 같았다.
+
+```python
+from setuptools import setup
+
+package_name = 'turtle_test'
+
+setup(
+    name=package_name,
+    version='0.0.0',
+    packages=[package_name],
+    data_files=[
+        ('share/ament_index/resource_index/packages',
+            ['resource/' + package_name]),
+        ('share/' + package_name, ['package.xml']),
+    ],
+    install_requires=['setuptools'],
+    zip_safe=True,
+    maintainer='jh',
+    maintainer_email='ahdtld54@korea.ac.kr',
+    description='TODO: Package description',
+    license='TODO: License declaration',
+    tests_require=['pytest'],
+    entry_points={
+        'console_scripts': [
+        ],
+    },
+)
+```
+**'data_files'** 매개변수를 사용하여 **'share'** 폴더를 설정할 수 있으므로, data_files 부분에 아래의 문장을 추가해주었다.
+
+```python
+('share/' + package_name, ['launch/turtle_launch.launch.py']),
+```
+
+이후 빌드를 다시 진행하니 share 디렉터리에 아래와 같이 **'turtle_launch.launch.py'** 파일이 생성되었다. 이후 launch 명령어를 실행하니 잘 작동하는 것을 확인할 수 있었다.
+
+![image](https://github.com/Juunghyeon/test/assets/78840944/93136423-da77-44d2-a13b-4272380b4c63)
+
+# Reference
+- <https://www.robotstory.co.kr/king/?mode=view&board_pid=884>
+- <https://puzzling-cashew-c4c.notion.site/ROS-2-Launch-launch-file-55c2125808ef4b64bade278852b37d6e>
