--- a/_posts/ROS2/2024-01-31-package.md
+++ b/_posts/ROS2/2024-01-31-package.md
@@ -143,14 +143,15 @@ $ ros2 run my_package my_node
 새로운 작업공간을 생성 후 turtle_test 라는 패키지를 생성하고 해당 패키지의 launch 파일을 통해 turtlesim의 실행과 사각형을 그리는 두 작업이 동시에 시작할 수 있도록 해보자.
 
 ### 과정
-1. 작업공간에 패키지 생성
+#### 1. 작업공간에 패키지 생성
 
 ```bash
 $ cd ~/dev_ws/src
 $ ros2 pkg create turtle_test --build-type ament_python
 ```
 
-2. turtle_test 패키지에 launch 폴더 생성 후 turtle_launch.launch.py 파일 생성
+##### 2. turtle_test 패키지에 launch 폴더 생성 후 turtle_launch.launch.py 파일 생성
+
 ```bash
 $ cd ~/dev_ws/src/turtle_test
 $ mkdir launch
@@ -159,7 +160,7 @@ $ touch ./launch/turtle_launch.launch.py
 
 ![image](https://github.com/Juunghyeon/test/assets/78840944/a3be3821-581b-401e-a7b6-011aa7180ba0)
 
-3. turtle_test 패키지 빌드
+#### 3. turtle_test 패키지 빌드
 
 ```bash
 $ cd ~/dev_ws
@@ -167,7 +168,7 @@ $ colcon build --package-select turtle_test
 $ source ./install/setup.bash
 ```
 
-4. launch 파일 실행 (Error 발생)
+#### 4. launch 파일 실행 (Error 발생)
 
 ```bash
 $ ros2 launch turtle_test turtle_launch.launch.py
