--- a/_posts/ROS2/2024-01-31-package.md
+++ b/_posts/ROS2/2024-01-31-package.md
@@ -215,6 +215,9 @@ setup(
 
 이후 빌드를 다시 진행하니 share 디렉터리에 아래와 같이 **'turtle_launch.launch.py'** 파일이 생성되었다. 이후 launch 명령어를 실행하니 잘 작동하는 것을 확인할 수 있었다.
 
+
+![image](https://github.com/Juunghyeon/test/assets/78840944/cf3cc3d0-2a46-4a07-b0c7-ab0cf3573414)
+
 ![image](https://github.com/Juunghyeon/test/assets/78840944/93136423-da77-44d2-a13b-4272380b4c63)
 
 # Reference
