--- a/_posts/ROS2/2024-01-31-package.md
+++ b/_posts/ROS2/2024-01-31-package.md
@@ -71,6 +71,7 @@ cmake_pkg/
 - package.xml: 패키지의 메타 정보를 담은 XML 파일
 
 ### python_pkg
+
 ```lua
 python_pkg/
 |-- python_pkg/
@@ -93,6 +94,7 @@ python_pkg/
 
 
 # 패키지 빌드
+
 Workspace의 'src' 폴더 안에 있는 ROS2 패키지들을 빌드할 때, colcon을 사용하여 빌드를 진행한다. 빌드가 완료되면, 빌드된 패키지들은 작업공간(workspace)의 디렉터리인 **'~/dev_ws/install'** 에 설치된다.
 
 **'ament_python'**을 사용하여 노드를 생성해보자.
@@ -139,10 +141,12 @@ $ ros2 run my_package my_node
 ```
 
 # 실습
+
 ### 목표
 새로운 작업공간을 생성 후 turtle_test 라는 패키지를 생성하고 해당 패키지의 launch 파일을 통해 turtlesim의 실행과 사각형을 그리는 두 작업이 동시에 시작할 수 있도록 해보자.
 
 ### 과정
+
 #### 1. 작업공간에 패키지 생성
 
 ```bash
@@ -150,7 +154,7 @@ $ cd ~/dev_ws/src
 $ ros2 pkg create turtle_test --build-type ament_python
 ```
 
-##### 2. turtle_test 패키지에 launch 폴더 생성 후 turtle_launch.launch.py 파일 생성
+#### 2. turtle_test 패키지에 launch 폴더 생성 후 turtle_launch.launch.py 파일 생성
 
 ```bash
 $ cd ~/dev_ws/src/turtle_test
@@ -160,7 +164,7 @@ $ touch ./launch/turtle_launch.launch.py
 
 ![image](https://github.com/Juunghyeon/test/assets/78840944/a3be3821-581b-401e-a7b6-011aa7180ba0)
 
-#### 3. turtle_test 패키지 빌드
+### 3. turtle_test 패키지 빌드
 
 ```bash
 $ cd ~/dev_ws
@@ -168,7 +172,7 @@ $ colcon build --package-select turtle_test
 $ source ./install/setup.bash
 ```
 
-#### 4. launch 파일 실행 (Error 발생)
+### 4. launch 파일 실행 (Error 발생)
 
 ```bash
 $ ros2 launch turtle_test turtle_launch.launch.py
@@ -207,6 +211,7 @@ setup(
     },
 )
 ```
+
 **'data_files'** 매개변수를 사용하여 **'share'** 폴더를 설정할 수 있으므로, data_files 부분에 아래의 문장을 추가해주었다.
 
 ```python
