--- a/_posts/ROS2/2024-01-31-package.md
+++ b/_posts/ROS2/2024-01-31-package.md
@@ -35,6 +35,8 @@ $ ros2 pkg create --build-type ament_python <패키지이름> --dependencies rcl
 
 이 명령어를 실행하면 지정한 옵션과 종속성을 가진 ROS 2 패키지의 기본 구조가 생성. 생성된 패키지는 'src', 'include', 'launch', 'test' 등의 디렉토리를 포함하며, 해당 디렉토리들에는 패키지의 소스 코드, 헤더 파일, 런치 파일, 테스트 코드 등이 위치. 이렇게 생성된 패키지를 기반으로 원하는 ROS 2 노드 및 기능을 개발할 수 있음.
 
+---
+
 # 패키지 생성
 일단 오버레이 작업 공간을 다음과 같이 생성한 뒤에 src 폴더에 패키지를 생성했다. Cpp 패키지와 Python 패키지를 각각 하나씩 생성한다.
 
@@ -92,6 +94,7 @@ python_pkg/
 - setup.cfg: Python 패키지 설정 파일
 - package.xml: 패키지의 메타 정보를 담은 XML 파일
 
+---
 
 # 패키지 빌드
 
@@ -140,6 +143,8 @@ $ ros2 run my_package my_node
 이 명령어는 빌드된 ROS 2 패키지들의 실행 파일, 라이브러리, 리소스에 접근할 수 있도록 현재 쉘의 환경을 구성하는 데 사용됩니다. 만약 source install/setup.bash 명령어를 실행하지 않으면 빌드된 패키지를 사용할 수 없습니다.
 ```
 
+--- 
+
 # 실습
 
 ### 목표
@@ -164,7 +169,7 @@ $ touch ./launch/turtle_launch.launch.py
 
 ![image](https://github.com/Juunghyeon/test/assets/78840944/a3be3821-581b-401e-a7b6-011aa7180ba0)
 
-### 3. turtle_test 패키지 빌드
+#### 3. turtle_test 패키지 빌드
 
 ```bash
 $ cd ~/dev_ws
@@ -172,7 +177,7 @@ $ colcon build --package-select turtle_test
 $ source ./install/setup.bash
 ```
 
-### 4. launch 파일 실행 (Error 발생)
+#### 4. launch 파일 실행 (Error 발생)
 
 ```bash
 $ ros2 launch turtle_test turtle_launch.launch.py
@@ -225,6 +230,10 @@ setup(
 
 ![image](https://github.com/Juunghyeon/test/assets/78840944/93136423-da77-44d2-a13b-4272380b4c63)
 
+---
+
 # Reference
 - <https://www.robotstory.co.kr/king/?mode=view&board_pid=884>
 - <https://puzzling-cashew-c4c.notion.site/ROS-2-Launch-launch-file-55c2125808ef4b64bade278852b37d6e>
+
+dsdsds
