--- a/_posts/ROS2/2024-01-31-topic.md
+++ b/_posts/ROS2/2024-01-31-topic.md
@@ -8,6 +8,7 @@ tag:
   - Topic
 
 toc: true
+toc_sticky: true
 ---
 
 ---
@@ -150,3 +151,6 @@ publishing #1: geometry_msgs.msg.Twist(linear=geometry_msgs.msg.Vector3(x=2.0, y
 "turtlesim_node"를 실행하고 나서 해당 토픽 퍼블리시 명령어를 실행하면 **'geometry_msgs/Twist'** 메시지를 **'/turtle1/cmd_vel'** 토픽에 퍼블리시합니다. 이로 인해 **'turtlesim_node'**에서는 거북이가 주어진 속도와 각속도로 이동한다. 이때 노드는 1개이다. 
 
 ![image](https://github.com/Juunghyeon/test/assets/78840944/772c28a4-ea43-42d8-8a00-c2d728145a42)
+
+---
+## bag 기록(ros2 bag record)
