--- a/_posts/ROS2/2024-01-31-topic.md
+++ b/_posts/ROS2/2024-01-31-topic.md
@@ -40,9 +40,11 @@ $ ros2 run turtlesim turtlesim_node
 $ ros2 run turtlesim turtle_teleop_key
 ```
 
+|||
+|---|---|
+|![image](https://github.com/Juunghyeon/test/assets/78840944/d7cda83b-dd76-4874-8a6c-0985dff94c73)|![image](https://github.com/Juunghyeon/test/assets/78840944/c3d16197-38c6-4fae-a9f8-ebc9bfe97bc8)|
 
-![image](https://github.com/Juunghyeon/test/assets/78840944/d7cda83b-dd76-4874-8a6c-0985dff94c73)|![image](https://github.com/Juunghyeon/test/assets/78840944/c3d16197-38c6-4fae-a9f8-ebc9bfe97bc8)
---|--|
+
 
 이때 각각의 토픽은 다음과 같다.
 - **cmd_vel(Command Velocity):** 주로 로봇 제어에 사용되는 토픽으로, 로봇에게 움직임 명령을 전달한다.
