--- a/_posts/ROS2/2024-01-31-topic.md
+++ b/_posts/ROS2/2024-01-31-topic.md
@@ -30,9 +30,9 @@ turtlesim 을 통해 토픽(Topic)에 대해서 이해해보자.
 ```bash
 $ ros2 run turtlesim turtlesim_node
 ```
-
-![image](https://github.com/Juunghyeon/test/assets/78840944/86b41cfd-04a6-4190-ad36-646ecc9cd611)|![image](https://github.com/Juunghyeon/test/assets/78840944/13402d8b-969d-467d-88c1-c166762baa43)
----|---|
+|screen|rqt_graph|
+|---|---|
+|![image](https://github.com/Juunghyeon/test/assets/78840944/86b41cfd-04a6-4190-ad36-646ecc9cd611)|![image](https://github.com/Juunghyeon/test/assets/78840944/13402d8b-969d-467d-88c1-c166762baa43)|
 
 
 아래의 명령어를 다른 터미널을 통해 실행하게 되면 turtle_teleop_key 노드가 새로 생성된다. 이때 이 두 노드는 토픽을 통해 통신한다.
@@ -40,7 +40,7 @@ $ ros2 run turtlesim turtlesim_node
 $ ros2 run turtlesim turtle_teleop_key
 ```
 
-|||
+|screen|rqt_graph|
 |---|---|
 |![image](https://github.com/Juunghyeon/test/assets/78840944/d7cda83b-dd76-4874-8a6c-0985dff94c73)|![image](https://github.com/Juunghyeon/test/assets/78840944/c3d16197-38c6-4fae-a9f8-ebc9bfe97bc8)|
 
