2024-02-03-ex_rcl.md

--- a/_posts/ROS2/2024-02-03-ex_rcl.md
+++ b/_posts/ROS2/2024-02-03-ex_rcl.md
@@ -12,7 +12,7 @@ toc_sticky: true
 ---
 
 ---
-# 1. rclpy 버전
+## 1. rclpy 버전
 ### 1. 패키지 생성
 
 ```bash
@@ -187,7 +187,7 @@ if __name__ == '__main__':
 
 ---
 
-# 2. rclcpp 버전
+## 2. rclcpp 버전
 
 ### 1. 패키지 생성
 
