--- a/_posts/ROS2/2024-01-31-package.md
+++ b/_posts/ROS2/2024-01-31-package.md
@@ -8,6 +8,7 @@ tag:
   - package
 
 toc: true
+toc_sticky: true
 ---
 
 ---
@@ -39,7 +40,7 @@ $ ros2 pkg create --build-type ament_python <패키지이름> --dependencies rcl
 
 ---
 
-# 패키지 생성
+## 패키지 생성
 일단 오버레이 작업 공간을 다음과 같이 생성한 뒤에 src 폴더에 패키지를 생성했다. Cpp 패키지와 Python 패키지를 각각 하나씩 생성한다.
 
 ```bash
@@ -98,7 +99,7 @@ python_pkg/
 
 ---
 
-# 패키지 빌드
+## 패키지 빌드
 
 Workspace의 'src' 폴더 안에 있는 ROS2 패키지들을 빌드할 때, colcon을 사용하여 빌드를 진행한다. 빌드가 완료되면, 빌드된 패키지들은 작업공간(workspace)의 디렉터리인 **'~/dev_ws/install'** 에 설치된다.
 
@@ -145,9 +146,30 @@ $ ros2 run my_package my_node
 이 명령어는 빌드된 ROS 2 패키지들의 실행 파일, 라이브러리, 리소스에 접근할 수 있도록 현재 쉘의 환경을 구성하는 데 사용됩니다. 만약 source install/setup.bash 명령어를 실행하지 않으면 빌드된 패키지를 사용할 수 없습니다.
 ```
 
+### 빌드 시스템에 필요한 부가 기능
+빌드 시스템에 필요한 부가 기능으로 ROS의 버전 시스템 툴인 **vcstool**, 의존성 관리 툴인 **rosdep**, 바이너리 패키지 관리 툴인 **bloom**이 있다.
+
+#### 1. vcstool(버전 컨트롤 시스템)
+vcs는 Version Control System의 약자로 ROS 커뮤니티에서 사용하는 vcstool의 실행 명령어이다. 다양한 리포지터리와 혼재된 버전 관리 시스템을 사용하더라도 ROS를 사용함에 있어서 불편함이 없도록 만들어진 툴이다.
+
+아래의 코드를 확인해보면, 우선 wget을 통하여 ros2.repos라는 파일을 받게 되는데 이 파일에는 vcs 타입, 리포지터리 주소, 설치해야 하는 브랜치에 대한 정보가 명시되어 있다. 이러한 정보가 기재된 *repos 파일을 이용하여 다양한 리포지터리, 다양한 vcs를 지원하며 패키지들을 관리할 수 있다.
+
+```bash
+$ wget https://raw.githubusercontent.com/ros2/ros2/foxy/ros2.repos
+$ vcs import src < ros2.repos
+```
+
+#### 2. rosdep(의존성 툴)
+기본적으로 빌트 툴들은 각 패키지의 의존성을 고려해주기는 하지만 의존성 자체를 해결해 주지는 않는다. 이를 위해 ROS에서는 rosdep 이라는 툴을 사용하는데 이는 package.xml에 기술된 의존성 정보를 가지고 의존성 패키지들을 설치해 주는 역할을 한다.
+
+#### 3. bloom(바이너리 패키지 관리 툴)
+bloom은 바이너리 패키지 관리 툴이다. 개발한 패키지를 사용자에게 전달하기 위해서는 쉽게 apt 명령어(sudo apt install ros-foxy-xxxxxx)를 통해 설치하고 이를 사용할 수 있도록 하는 것이 좋은데, 이러한 바이너리 패키지 배포 및 관리를 위한 툴이 bloom 이다. 이 툴을 사용하면 바이너리 패키지를 관리하기 위한 메타 데이터를 생성하고 dpkg-buildpackage와 같은 플랫폼 종속 도구가 바이너리 패키지를 빌드하는 데 사용된다.
+
 --- 
 
-# 실습
+
+
+## 실습
 
 ### 목표
 새로운 작업공간을 생성 후 turtle_test 라는 패키지를 생성하고 해당 패키지의 launch 파일을 통해 turtlesim의 실행과 사각형을 그리는 두 작업이 동시에 시작할 수 있도록 해보자.
@@ -234,6 +256,6 @@ setup(
 
 ---
 
-# Reference
+## Reference
 - <https://www.robotstory.co.kr/king/?mode=view&board_pid=884>
 - <https://puzzling-cashew-c4c.notion.site/ROS-2-Launch-launch-file-55c2125808ef4b64bade278852b37d6e>
