2024-02-03-ex_rcl.md

--- a/_posts/ROS2/2024-02-03-ex_rcl.md
+++ b/_posts/ROS2/2024-02-03-ex_rcl.md
@@ -199,7 +199,7 @@ $ ros2 pkg create rclcpp_pkg --build-type ament_cmake --dependencies rclcpp std_
 ### 2. 빌드 설정 파일(CMakeLists.txt)
 빌드 설정 파일에서 주의할 점은 의존성 패키지의 설정과 빌드 및 설치 관련 설정이다. 이 패키지에서는 빌드 시에 필요한 ament_cmake 패키지, 클라이언트 라이브러리 rclcpp 패키지, 메시지 인터페이스 std_msgs 패키지가 의존성 패키지로 사용됨을 명시하였다. 그리고 helloworld_publisher와 helloworld_subscriber 실행 파일의 빌드 및 설치를 위한 설정이 포함되어 있다.
 
-```txt
+```bash
 # Set minimum required version of cmake, project name and compile options
 cmake_minimum_required(VERSION 3.5)
 project(my_first_ros_rclcpp_pkg)
