--- a/_posts/ROS2/2024-02-19-xacro.md
+++ b/_posts/ROS2/2024-02-19-xacro.md
@@ -11,13 +11,13 @@ toc: true
 toc_sticky: true
 ---
 
-## xacro 란?
+# xacro 란?
 
 `'xacro'`는 ROS(로봇 운영 체제)에서 XML로 로봇 모델을 정의할 때 사용되는 확장 XML 형식이다. xacro 파일은 XML 문법을 기반으로 하며, 특정한 문법과 기능을 추가하여 로봇 모델을 더 쉽게 작성하고 관리할 수 있도록 도와준다.
 
 xacro를 사용하면 로봇 모델의 중복을 피하고 파라미터화된 모델을 생성할 수 있다. 예를 들어, 로봇의 부분을 정의하는데 있어서 반복되는 코드를 하나의 매크로로 작성하여 재사용할 수 있다. 또한 변수, 조건문, 반복문과 같은 프로그래밍적인 요소를 사용하여 모델을 동적으로 구성할 수 있다.
 
-예시를 확인해 보자:
+## Example
 
 ```xml
 <?xml version="1.0"?>
