--- a/_posts/ROS2/2024-03-19-issues.md
+++ b/_posts/ROS2/2024-03-19-issues.md
@@ -9,8 +9,9 @@ tag:
 toc: true
 toc_sticky: true
 ---
+# Issues in ROS2
 
-## ros2 launch urdf_tutorial display.launch.py model:
+## 1. ros2 launch urdf_tutorial display.launch.py model:
 
 ![image](https://github.com/Juunghyeon/images/assets/78840944/7ab31662-62ea-4956-9e40-d6504d978256)
 
